# vivah

./: .dockerignore  .gitattributes  .gitignore  .npmrc  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  UI-POLISH-PLAN.md  apply-schema-fix.js  audit-all-schema.js  check-profiles.js  cookies.txt  diagnose-500s.js  diagnose-feed.js  docker-compose.yml  eslint.config.js  fix-all-prefs.js  fix-caste-income.js  fix-feed.js  fix-schema-drift.sql  package.json  pnpm-lock.yaml  railway.toml  resp_dash.html  tsconfig.base.json  turbo.json  vercel.json
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-13T20-39-39-918Z.yml  page-2026-04-13T20-43-40-944Z.yml  (+21 more)
apps/ai-service/: .env.example  Dockerfile  GUNA_PLAN.md  pyproject.toml  railway.toml
apps/ai-service/src/: main.py
apps/ai-service/src/datasets/: calendar-2026-2027.json
apps/ai-service/src/lib/: sentry_redactor.py  test_sentry_redactor.py
apps/ai-service/src/prompts/: conversation-coach-v1.md
apps/ai-service/src/routers/: _p3_register.py  assistant.py  calendar.py  coach.py  dpi.py  embedding.py  emotional.py  faq.py  fii.py  horoscope.py  marketing.py  marriage_readiness.py  pricing.py  profile_optimizer.py  reputation.py  stay.py  translate.py
apps/ai-service/src/schemas/: assistant.py  calendar.py  coach.py  dpi.py  embedding.py  emotional.py  faq.py  fii.py  horoscope.py  marketing.py  marriage_readiness.py  pricing.py  profile_optimizer.py  reputation.py  stay.py  translate.py
apps/ai-service/src/services/: api_client.py  assistant_errors.py  assistant_service.py  assistant_tools.py  calendar_service.py  coach_service.py  dpi_model.py  dpi_service.py  dpi_training.py  embedding_model.py  embedding_service.py  emotional_service.py  faq_model.py  faq_service.py  faq_training.py  fii_service.py  guna_milan.py  llm_client.py  marketing_service.py  marriage_readiness_service.py  observability.py  pricing_service.py  profile_optimizer_service.py  reputation_model.py  reputation_service.py  reputation_training.py  sentiment_model.py  stay_model.py  stay_service.py  stay_training.py  translate_service.py
apps/ai-service/tests/: conftest.py  test_assistant.py  test_calendar.py  test_coach.py  test_dpi.py  test_dpi_model.py  test_emotional.py  test_faq.py  test_fii.py  test_guna_milan.py  test_guna_milan_vedic_audit.py  test_health.py  test_llm_client.py  test_marketing.py  test_marriage_readiness.py  test_pricing.py  test_profile_optimizer.py  test_reputation.py  test_reputation_model.py  test_stay.py  test_translate.py
docs/: ACTION-TRACKER.md  (+25 more)
(+1758 files in other folders)
