[project]
name = "smart-shaadi-ai-service"
version = "0.1.0"
description = "Smart Shaadi AI Service — ML scoring, matchmaking, fraud detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "numpy>=2.0.0",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.37.0",
    "openai>=1.40.0",
    "redis>=5.0.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",
    "motor>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# App entrypoint deliberately runs load_dotenv() + structlog/Sentry init before
# importing routers (which read env at import time); the load order is required.
"src/main.py" = ["E402"]

[tool.ruff.lint.pep8-naming]
# `X` (and X_train / X_rows / X1 / X2) are the sklearn feature-matrix convention
# in the ML training/model code — uppercase is intentional, not a naming smell.
extend-ignore-names = ["X", "X_*", "X1", "X2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]